# STE---Simple-Text-Editor

./: .gitignore  CMakeLists.txt  README.md  install.sh  tags
assets/: options.json
include/: .Editor.h  Application.h  Button.h  CustomizationApp.h  Editor.h  EditorWindow.h  FileManager.h  InputEditor.h  MenuBar.h  SaveManager.h  SavingFile.h  Slider.h  TextEditor.h
src/: .Editor.cpp  Application.cpp  Button.cpp  CustomizationApp.cpp  Editor.cpp  EditorWindow.cpp  FileManager.cpp  InputEditor.cpp  MenuBar.cpp  SaveManager.cpp  Slider.cpp  TextEditor.cpp  main.cpp
